fixed alignment for ecofriends and shoppinglist

--- a/src/app/main/component/user/components/profile/shopping-list/shopping-list.component.scss
+++ b/src/app/main/component/user/components/profile/shopping-list/shopping-list.component.scss
@@ -12,7 +12,7 @@ $bp-largest: 1440px;
 
 .shoppingList-block {
   border-top: 1px solid var(--quaternary-light-grey);
-  width: 185px;
+  width: 213px;
   padding: 25px 0;
 }
 
