--- a/src/app/main/component/user/components/profile/users-friends/users-friends.component.scss
+++ b/src/app/main/component/user/components/profile/users-friends/users-friends.component.scss
@@ -98,7 +98,7 @@ p {
       font-size: 14px;
       line-height: 17px;
       color: var(--primary-dark-grey);
-      width: 185px;
+      width: 213px;
       border-top: 1px solid $additional-color;
     }
 
